--- a/todoList_localstorage_js.html
+++ b/todoList_localstorage_js.html
@@ -90,20 +90,29 @@ const init = () => {
   const todoCount = todoList.length;
   const doneList = data.list.filter(todo => todo.doneYn == "Y");
 
-  const todoListTag = document.querySelector("#todoList");
-  const doneListTag = document.querySelector("#doneList");
-  const todoCountTag = document.querySelector("#todoCount");
+  // jQuery() 형식으로 제이쿼리를 사용
+  // empty() 메소드는 해당 태그의 자식들을 모두 삭제한다.
 
-  todoListTag.innerHTML = "";
-  doneListTag.innerHTML = "";
-  todoCountTag.innerHTML = "";
+  // jQuery("#todoList").empty();
+  // jQuert를 줄여서 $로 적는 경우가 대부분이다.
+  $("#todoList").empty();
+  $("#doneList").empty();
+  $("#todoCount").empty();
 
-  todoCountTag.innerHTML = todoCount;
+
+  // todoCountTag.innerHTML = todoCount;
+  //text() 매개변수에 값을 넣으면 태그에 문자가 입력된다.
+  $("#todoCount").text(todoCount);
+  //text() 매게변수에 값을 넣지 않으면 태그 내용을 가져온다.
+  console.log($("#todoCount").text());
+  // $("#todoCount").html(todoCount);
 
   for (const todo of todoList) 
   {
-    todoListTag.insertAdjacentHTML(
-      "beforeend",
+    // append() 함수는 문자열로 적은 html을 
+    // 자식 코드 아래 쪽에 배치한다.
+    // 반대로 역순으로 넣고 싶으면 prepend를 사용하면 된다.
+    $("#todoList").append(
       `
       <li class="ui-state-default">
         <div class="checkbox">
@@ -114,14 +123,12 @@ const init = () => {
         </div>
       </li>
       `
-    );  
+    );
   }
 
   for (const todo of doneList)
   {
-    doneListTag.insertAdjacentHTML
-    (
-      "beforeend",
+    $("#doneList").append(
       `
       <li>
         <div class="checkbox">
@@ -151,8 +158,7 @@ const init = () => {
 init();
 
     // 데이터 추가하기 
-  const contentTag =  document.querySelector("#content");
-    contentTag.addEventListener("keyup", (e) => {
+    $("#content").on("keyup", (e) => {
       //엔터키아니면 함수 종료
       if(e.keyCode != 13) 
       {
@@ -160,7 +166,7 @@ init();
         return;
       }
       //빈값이면 함수 종료
-      if(contentTag.value == "")
+      if($("#content").val() == "")
       {
         alert("내용을 입력해 주세요")
         return;
@@ -182,7 +188,7 @@ init();
 
       localStorage.setItem("data", JSON.stringify(data));
 
-      contentTag.value = "";
+      $("#content").val("");
 
       init();
 
