--- a/todoList.html
+++ b/todoList.html
@@ -225,8 +225,8 @@
     // 데이터 삭제하기
     const setDelete = (idx) => {
       $.ajax({
-        url: "http://localhost:8080/api/v2/todo/" - idx,
-        type: "put"
+        url: "http://localhost:8080/api/v2/todo/" + idx,
+        type: "delete"
 
       }).done((result) => {
         console.log(result);
